--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -2,3 +2,4 @@ login_host: db-dev.avinexpense.online
 login_user: root
 mysql_root_passwd: ExpenseApp1
 DB_HOST: db-dev.avinexpense.online
+BACKEND_API_URL: backend.app-dev.avinexpense.online
