--- a/roles/common/tasks/app-pre-req.yaml
+++ b/roles/common/tasks/app-pre-req.yaml
@@ -8,8 +8,14 @@
    path: "{{app_location}}"
    state: directory
 
-- name: downloading and unzipping file
+# - name: downloading and unzipping file
+#   ansible.builtin.unarchive:
+#     src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{component}}-v2.zip
+#     dest: "{{app_location}}"
+#     remote_src: yes
+
+- name: downloading the artifact from nexus
   ansible.builtin.unarchive:
-    src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{component}}-v2.zip
+    src: "http://{{nexus_url}}:8081/repository/{{component}}/com/expense/{{component}}/{{appVersion}}/{{component}}-{{appVersion}}.zip"
     dest: "{{app_location}}"
     remote_src: yes
