--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -3,3 +3,4 @@ login_user: root
 mysql_root_passwd: ExpenseApp1
 DB_HOST: db-dev.avinexpense.online
 BACKEND_API_URL: backend.app-dev.avinexpense.online
+nexus_url: nexus.avinexpense.online:8081
