--- a/roles/common/tasks/app-pre-req.yaml
+++ b/roles/common/tasks/app-pre-req.yaml
@@ -16,6 +16,6 @@
 
 - name: downloading the artifact from nexus
   ansible.builtin.unarchive:
-    src: "http://{{nexus_url}}:8081/repository/{{component}}/com/expense/{{component}}/{{appVersion}}/{{component}}-{{appVersion}}.zip"
+    src: "http://{{nexus_url}}/repository/{{component}}/com/expense/{{component}}/{{appVersion}}/{{component}}-{{appVersion}}.zip"
     dest: "{{app_location}}"
     remote_src: yes
